examples/test/testpolicy19274.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19274
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key37: value42
      key8: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value28
          key14: value20
          key12: value38
      podSelector:
        matchLabels:
          key4: value17
          key44: value3
          key25: value21
